r264 (07. 10. 2024):
Added proper support for Vanilla Holdout levels
Fixed Tag Team buffs not working correctly on clients
Fixed position issues in Tracker Description
Tracker Description will be on the left side when option "(Vertical) Panel Width Animation" is set to "Right to Left"
Difficulty Tracker: Enabled in Holdout to show enemy damage and health boost respectively
Enemy Counter: Disabled in Safehouse
Loot Counter: Fixed green text when all possible loot is secured and random loot bag in safe spawned after
Menu: Fixed option "(Vertical) Panel Width Animation" set to "Right to Left" not properly visible in the preview
Diamond Store: Improved random loot detection in safes
Rats Day 2: Improved random loot detection in safes

r263 (25. 09. 2024):
Cook Off: Fixed a crash
White Xmas: Fixed a crash

r262 (24. 09. 2024):
Experience Manager: Fixed a crash when visible experience are enabled in Mission Briefing only

r261 (23. 09. 2024):
Aggregated Health Equipment Tracker: Fixed visual issues
Enemy Counter: Fixed visual issues

r260 (22. 09. 2024):
Experience Manager: Fixed a possible crash

r259 (13. 09. 2024):
Updated to U240.6

r258 (12. 09. 2024):
Added color options "Snipers (Current Chance)" and "Snipers (Count)"
Rats Day 1: Fixed a crash after reaching the lab

r257 (11. 09. 2024):
Achievement Loot Counter: Fixed an issue where after alarm a tracker icon color is still visible as achievement
Assault Tracker: In Holdout game mode, expanded option "Show Assault Difficulty in Assault Trackers" to show enemy damage and health boost respectively
Assault Tracker: In Holdout game mode, added support for "Control" and "Anticipation" state
Assault Tracker: Made accurate "Anticipation" and "Sustain" state by syncing time from host
Civilian Counter Tracker: Disabled in Holdout game mode
Menu: Improved memory consumption by deferring loading preview trackers and buffs when they are really needed
Menu: Fixed a gap in preview trackers when icon position is set to left